resource-manifests/deployment-sa-feedback.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-feedback
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-feedback
    spec:
      containers:
        - image: gcr.io/green-calling-203409/sa-feedback:v1
          imagePullPolicy: Always
          name: sa-feedback
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 384Mi
          volumeMounts:
            - name: sqlite-volume
              mountPath: /usr/db
      volumes:
        - name: sqlite-volume
          persistentVolumeClaim:
            claimName: sqlite-pvc
