resource-manifests/deployment-sa-logic.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-logic
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-logic
    spec:
      containers:
        - image: gcr.io/green-calling-203409/sa-logic:v1
          imagePullPolicy: Always
          name: sa-logic
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 384Mi
