resource-manifests/deployment-sa-web-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-web-app
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
        - image: gcr.io/green-calling-203409/sa-web-app:v1
          imagePullPolicy: Always
          name: sa-web-app
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 6
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
